fix crop category image on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -534,7 +534,7 @@ a.carousel-control.right:hover {
   h2.category-title {
     font-size:1.6em;
   }
-  .col-md-6.project-col .project-image-container, .col-md-12.project-col .project-image-container {
+  .col-sm-6.project-col .project-image-container, .col-md-12.project-col .project-image-container {
       max-height: 195px;
   }
 }
